# bc-envelope-cli-rust

./: CLA.md  Cargo.toml  PRIORITY-TASK.md  README.md  test.txt
CLA-signed/: CLA.wolfmcnally.943652EE38441760C3DC35364B6C2FCF894780AE.md
docs/: 1-OVERVIEW-.md  1-Overview.md  2-BASIC-EXAMPLES.md  3-SSKR-EXAMPLE.md  4-METADATA-EXAMPLE.md  5-DID-EXAMPLE.md  6-VC-RESIDENT-EXAMPLE.md  7-VC-ELISION-EXAMPLE.md  8-EXISTENCE-PROOFS.md  9-DIFFING.md  Attachments.md  BasicExamples.md  DIDExample.md  InclusionProofs.md  Key-Formats.md  MetadataExample.md  Multipart-UR.md  Overview.md  PatternMatching.md  README.md  SSKRExample.md  Signing.md  VCElisionExample.md  VCResidentExample.md  Walk.md  XID-Attachments.md  XID-Basics.md  XID-Delegates.md  XID-Edges.md  XID-Export.md  XID-Keys.md  XID-Methods.md  XID-Provenance.md  XID-Services.md  XID-Signing.md  XID.md
examples/: .gitignore  README.md  generate_xid_provenance_sequence.py  xid-sequence-script.txt
src/: data_types.rs  envelope_args.rs  exec.rs  main.rs  pred_obj_args.rs  styles.rs  subject_args.rs  utils.rs
src/cmd/: compress.rs  decompress.rs  decrypt.rs  digest.rs  encrypt.rs  export.rs  extract.rs  format.rs  import.rs  info.rs  mod.rs  pattern.rs  salt.rs  sign.rs  uncompress.rs  verify.rs
src/cmd/assertion/: all.rs  at.rs  count.rs  create.rs  mod.rs
src/cmd/assertion/add/: envelope.rs  mod.rs  pred_obj.rs  predicate_object.rs
src/cmd/assertion/find/: mod.rs  object.rs  predicate.rs
src/cmd/assertion/remove/: envelope.rs  mod.rs  pred_obj.rs  predicate_object.rs
src/cmd/attachment/: all.rs  at.rs  conforms_to.rs  count.rs  create.rs  find.rs  mod.rs  payload.rs  vendor.rs
src/cmd/attachment/add/: components.rs  envelope.rs  mod.rs
src/cmd/elide/: elide_args.rs  mod.rs  removing.rs  revealing.rs
src/cmd/generate/: arid.rs  digest.rs  hash_type.rs  key.rs  keypairs.rs  mod.rs  nonce.rs  prv_keys.rs  pub_keys.rs  seed.rs  signer.rs  signer_type.rs  verifier.rs
src/cmd/proof/: confirm.rs  create.rs  mod.rs
src/cmd/sskr/: join.rs  mod.rs  split.rs
src/cmd/subject/: assertion.rs  mod.rs  single.rs  type.rs
src/cmd/walk/: decompress.rs  decrypt.rs  matching.rs  mod.rs  replace.rs  unelide.rs
src/cmd/xid/: export.rs  generator_options.rs  id.rs  key_args.rs  key_privilege.rs  mod.rs  new.rs  output_options.rs  password_args.rs  private_options.rs  signing_args.rs  utils.rs  verify_args.rs  xid_privilege.rs  xid_utils.rs
src/cmd/xid/attachment/: add.rs  all.rs  at.rs  count.rs  find.rs  mod.rs  remove.rs
src/cmd/xid/delegate/: add.rs  all.rs  at.rs  count.rs  find.rs  mod.rs  remove.rs  update.rs
src/cmd/xid/edge/: add.rs  all.rs  at.rs  count.rs  find.rs  mod.rs  remove.rs
src/cmd/xid/key/: add.rs  all.rs  at.rs  count.rs  mod.rs  remove.rs  update.rs
src/cmd/xid/method/: add.rs  all.rs  at.rs  count.rs  mod.rs  remove.rs
src/cmd/xid/provenance/: get.rs  mod.rs  next.rs
src/cmd/xid/resolution/: add.rs  all.rs  at.rs  mod.rs  remove.rs
src/cmd/xid/service/: add.rs  all.rs  at.rs  count.rs  find.rs  mod.rs  remove.rs  service_args.rs  update.rs
src/commands/: compress.rs  decrypt.rs  digest.rs  encrypt.rs  extract.rs  format.rs  salt.rs  sign.rs  uncompress.rs  verify.rs
src/commands/assertion/: all.rs  at.rs  count.rs  create.rs  mod.rs
src/commands/elide/: mod.rs
src/commands/generate/: mod.rs
src/commands/sskr/: mod.rs
src/commands/subject/: mod.rs
tests/: assertion_add_pred_obj.rs  cli.rs  cli_tests.rs  extract.rs  format.rs  generate.rs  subject_assertion.rs  subject_single.rs  subject_type.rs  test_assertion.rs  test_assertion_add_pred_obj.rs  test_attachment.rs  test_compress.rs  test_digest.rs  test_elide.rs  test_encrypt.rs  test_extract.rs  test_format.rs  test_generate.rs  test_import.rs  test_invalid.rs  test_issue_triage_repro.rs  test_keys.rs  test_match.rs  test_open_issue_tdd.rs  test_salt.rs  test_sign.rs  test_sskr.rs  test_subject_assertion.rs  test_subject_type.rs  test_walk.rs  test_xid.rs  test_xid_edge.rs  test_xid_export.rs  test_xid_resolution.rs  test_xid_signing.rs
tests/common/: mod.rs
(+14 files in other folders)
