[package]
name = "bc-envelope-cli"
version = "0.24.0"
edition = "2024"
description = "Gordian Envelope Command Line Tool."
authors = ["Blockchain Commons"]
repository = "https://github.com/BlockchainCommons/bc-envelope-cli-rust"
readme = "README.md"
license = "BSD-2-Clause-Patent"
documentation = "https://docs.rs/bc-envelope-cli"
keywords = [
    "encoding",
    "cbor",
    "binary",
    "format",
    "serialization",
] # Up to five
categories = [
    "data-structures",
    "encoding",
    "command-line-utilities",
] # https://crates.io/category_slugs

[[bin]]
name = "envelope"
path = "src/main.rs"

[dependencies]
dcbor = "^0.23.1"
bc-ur = "^0.14.0"
bc-envelope = "^0.35.0"
bc-envelope-pattern = "^0.6.0"
bc-components = "^0.26.0"
bc-rand = "^0.4.1"
bc-xid = "^0.14.0"
provenance-mark = "^0.14.0"

clap = { version = "^4.4.3", features = ["derive", "unstable-styles"] }
anyhow = "^1.0.0"
anstyle = "^1.0.1"
hex = "^0.4.3"
regex = "^1.11.1"
ssh-key = { version = "=0.6.7", default-features = false, features = [
    "dsa",
    "ecdsa",
    "rand_core",
    "std",
    "crypto",
    "encryption",
] }
rpassword = "7.3.1"
which = "7.0.3"

[dev-dependencies]
assert_cmd = "^2.0.12"
indoc = "^2.0.0"
