[package]
name = "bc-envelope-cli"
version = "0.26.1"
edition = "2024"
description = "Gordian Envelope Command Line Tool."
authors = ["Blockchain Commons"]
repository = "https://github.com/BlockchainCommons/bc-envelope-cli-rust"
readme = "README.md"
license = "BSD-2-Clause-Patent"
documentation = "https://docs.rs/bc-envelope-cli"
keywords = [
    "encoding",
    "cbor",
    "binary",
    "format",
    "serialization",
] # Up to five
categories = [
    "data-structures",
    "encoding",
    "command-line-utilities",
] # https://crates.io/category_slugs

[[bin]]
name = "envelope"
path = "src/main.rs"

[dependencies]
dcbor = { version = "^0.23.2", features = ["multithreaded"] }
bc-ur = "^0.15.0"
bc-envelope = { version = "^0.36.0", features = ["multithreaded"] }
bc-envelope-pattern = "^0.7.0"
bc-components = { version = "^0.27.0", features = ["ssh-agent"] }
bc-rand = "^0.4.1"
bc-xid = "^0.15.1"
provenance-mark = "^0.15.0"

clap = { version = "^4.4.3", features = ["derive", "unstable-styles"] }
anyhow = "^1.0.0"
anstyle = "^1.0.1"
hex = "^0.4.3"
regex = "^1.11.1"
ssh-key = { version = "=0.6.7", default-features = false, features = [
    "dsa",
    "ecdsa",
    "rand_core",
    "std",
    "crypto",
    "encryption",
] }
rpassword = "7.3.1"
which = "7.0.3"

[dev-dependencies]
assert_cmd = "^2.0.12"
indoc = "^2.0.0"
