[package]
name = "bc-envelope-cli"
version = "0.34.0"
edition = "2024"
description = "Gordian Envelope Command Line Tool."
authors = ["Blockchain Commons"]
repository = "https://github.com/BlockchainCommons/bc-envelope-cli-rust"
readme = "README.md"
license = "BSD-2-Clause-Patent"
documentation = "https://docs.rs/bc-envelope-cli"
keywords = [
    "encoding",
    "cbor",
    "binary",
    "format",
    "serialization",
] # Up to five
categories = [
    "data-structures",
    "encoding",
    "command-line-utilities",
] # https://crates.io/category_slugs

[[bin]]
name = "envelope"
path = "src/main.rs"

[dependencies]
dcbor = { version = "^0.25.0", features = ["multithreaded"] }
bc-ur = "^0.19.0"
bc-envelope = { version = "^0.43.0", features = ["multithreaded"] }
bc-envelope-pattern = "^0.14.0"
bc-components = { version = "^0.31.0", features = ["ssh-agent"] }
bc-rand = "^0.5.0"
bc-xid = "^0.22.0"
provenance-mark = "^0.23.0"

clap = { version = "^4.4.3", features = ["derive", "unstable-styles"] }
anyhow = "^1.0.0"
anstyle = "^1.0.1"
hex = "^0.4.3"
rand = "0.8"  # For OsRng that implements rand_core 0.6 CryptoRng (required by ssh-key 0.6)
regex = "^1.11.1"
ssh-key = { version = "=0.6.7", default-features = false, features = [
    "dsa",
    "ecdsa",
    "rand_core",
    "std",
    "crypto",
    "encryption",
] }
rpassword = "7.3.1"
which = "^8.0.0"

[dev-dependencies]
assert_cmd = "^2.0.12"
indoc = "^2.0.0"
